Show income and financing assumptions for a property in the properties list by clicking on that property in the list

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,3 +1,18 @@
-<div>
+<div id="financing-and-income-assumptions"
+     ng-controller="RentalPropertyController">
+
   Financing and Income Assumptions
+  <div id="valuation-inputs">
+    Inputs
+    <div id="land-cost">{{financing_and_income_assumption.land_cost}}</div>
+    <div id="building-cost">{{financing_and_income_assumption.building_cost}}</div>
+    <div id="improvements">{{financing_and_income_assumption.improvements}}</div>
+    <div id="total-square-feet">{{financing_and_income_assumption.total_square_feet}}</div>
+    <div id="number-of-units">{{financing_and_income_assumption.number_of_units}}</div>
+    <div id="average-monthly-rent">{{financing_and_income_assumption.average_monthly_rent_per_unit}}</div>
+    <div id="other-income">{{financing_and_income_assumption.other_monthly_income}}</div>
+    <div id="equity-percentage">{{financing_and_income_assumption.equity_percentage}}</div>
+    <div id="loan-interest-rate">{{financing_and_income_assumption.loan_interest_rate}}</div>
+    <div id="amortization-period-in-years">{{financing_and_income_assumption.amortization_period_in_years}}</div>
+  </div>
 </div>
