Show closing costs for each property

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -35,4 +35,24 @@
     <div id="equipment-depreciation">Equipment Depreciation: {{operating_expenses_assumption.equipment_depreciation}}</div>
     <div id="income-tax-rate">Income Tax Rate: {{operating_expenses_assumption.income_tax_rate}}</div>
   </div>
+
+  <div id="closing-costs">
+    <div>Closing Costs</div>
+    <div id="origination-fee">Origination Fee: {{closing_cost.origination_fee}}</div>
+    <div id="processing-fee">Processing Fee: {{closing_cost.processing_fee}}</div>
+    <div id="discount-points">Discount Points: {{closing_cost.discount_points}}</div>
+    <div id="underwriting-fee">Underwriting Fee: {{closing_cost.underwriting_fee}}</div>
+    <div id="appraisal">Appraisal: {{closing_cost.appraisal}}</div>
+    <div id="flood-certificate">Flood Certificate: {{closing_cost.flood_certificate}}</div>
+    <div id="credit-report">Credit Report: {{closing_cost.credit_report}}</div>
+    <div id="tax-services">Tax Services: {{closing_cost.tax_services}}</div>
+    <div id="title-insurance">Title Insurance: {{closing_cost.title_insurance}}</div>
+    <div id="survey">Survey: {{closing_cost.survey}}</div>
+    <div id="title-fees">Title Fees: {{closing_cost.title_fees}}</div>
+    <div id="transfer-taxes">Transfer Taxes: {{closing_cost.transfer_taxes}}</div>
+    <div id="government-recording-charges">Government Recording Charges: {{closing_cost.government_recording_charges}}</div>
+    <div id="homeowners-insurance">Homeowners Insurance: {{closing_cost.homeowners_insurance}}</div>
+    <div id="settlement-company-charges">Settlement Company Charges: {{closing_cost.settlement_company_charges}}</div>
+    <div id="wire-charges">Wire Charges: {{closing_cost.wire_charges}}</div>
+  </div>
 </div>
