Move controller declarations from property list and property views into their router definitions

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,6 +1,4 @@
-<div id="financing-and-income-assumptions"
-     ng-controller="RentalPropertyController">
-
+<div id="financing-and-income-assumptions">
   <div>Financing and Income Assumptions</div>
   <valuation-inputs></valuation-inputs>
   <operating-expenses-inputs></operating-expenses-inputs>
