--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,5 +1,7 @@
-<div id="financing-and-income-assumptions">
-  <div>Financing and Income Assumptions</div>
+<div id="financing-and-income-assumptions" class="container">
+  <div class="row">
+    <div class="col-md-7 subsection-header">Financing and Income Assumptions</div>
+  </div>
   <valuation-inputs></valuation-inputs>
   <operating-expenses-inputs></operating-expenses-inputs>
   <closing-costs-inputs></closing-costs-inputs>
