--- a/public/investment_properties_pages/closing_costs.html
+++ b/public/investment_properties_pages/closing_costs.html
@@ -1,19 +1,69 @@
 <div id="closing-costs">
-  <div>Closing Costs</div>
-  <div id="origination-fee">Origination Fee: {{closing_cost.origination_fee}}</div>
-  <div id="processing-fee">Processing Fee: {{closing_cost.processing_fee}}</div>
-  <div id="discount-points">Discount Points: {{closing_cost.discount_points}}</div>
-  <div id="underwriting-fee">Underwriting Fee: {{closing_cost.underwriting_fee}}</div>
-  <div id="appraisal">Appraisal: {{closing_cost.appraisal}}</div>
-  <div id="flood-certificate">Flood Certificate: {{closing_cost.flood_certificate}}</div>
-  <div id="credit-report">Credit Report: {{closing_cost.credit_report}}</div>
-  <div id="tax-services">Tax Services: {{closing_cost.tax_services}}</div>
-  <div id="title-insurance">Title Insurance: {{closing_cost.title_insurance}}</div>
-  <div id="survey">Survey: {{closing_cost.survey}}</div>
-  <div id="title-fees">Title Fees: {{closing_cost.title_fees}}</div>
-  <div id="transfer-taxes">Transfer Taxes: {{closing_cost.transfer_taxes}}</div>
-  <div id="government-recording-charges">Government Recording Charges: {{closing_cost.government_recording_charges}}</div>
-  <div id="homeowners-insurance">Homeowners Insurance: {{closing_cost.homeowners_insurance}}</div>
-  <div id="settlement-company-charges">Settlement Company Charges: {{closing_cost.settlement_company_charges}}</div>
-  <div id="wire-charges">Wire Charges: {{closing_cost.wire_charges}}</div>
+  <div class="row">
+    <div class="col-md-3 subsection-header">Closing Costs</div>
+  </div>
+  <div id="origination-fee" class="row">
+    <span class="col-md-2">Origination Fee</span>
+    <span class="col-md-1 align-right">{{closing_cost.origination_fee | currency}}</span>
+  </div>
+  <div id="processing-fee" class="row">
+    <span class="col-md-2">Processing Fee</span>
+    <span class="col-md-1 align-right">{{closing_cost.processing_fee | currency}}</span>
+  </div>
+  <div id="discount-points" class="row">
+    <span class="col-md-2">Discount Points</span>
+    <span class="col-md-1 align-right">{{closing_cost.discount_points | number}}</span>
+  </div>
+  <div id="underwriting-fee" class="row">
+    <span class="col-md-2">Underwriting Fee</span>
+    <span class="col-md-1 align-right">{{closing_cost.underwriting_fee | currency}}</span>
+  </div>
+  <div id="appraisal" class="row">
+    <span class="col-md-2">Appraisal</span>
+    <span class="col-md-1 align-right">{{closing_cost.appraisal | currency}}</span>
+  </div>
+  <div id="flood-certificate" class="row">
+    <span class="col-md-2">Flood Certificate</span>
+    <span class="col-md-1 align-right">{{closing_cost.flood_certificate | currency}}</span>
+  </div>
+  <div id="credit-report" class="row">
+    <span class="col-md-2">Credit Report</span>
+    <span class="col-md-1 align-right">{{closing_cost.credit_report | currency}}</span>
+  </div>
+  <div id="tax-services" class="row">
+    <span class="col-md-2">Tax Services</span>
+    <span class="col-md-1 align-right">{{closing_cost.tax_services | currency}}</span>
+  </div>
+  <div id="title-insurance" class="row">
+    <span class="col-md-2">Title Insurance</span>
+    <span class="col-md-1 align-right">{{closing_cost.title_insurance | currency}}</span>
+  </div>
+  <div id="survey" class="row">
+    <span class="col-md-2">Survey</span>
+    <span class="col-md-1 align-right">{{closing_cost.survey | currency}}</span>
+  </div>
+  <div id="title-fees" class="row">
+    <span class="col-md-2">Title Fees</span>
+    <span class="col-md-1 align-right">{{closing_cost.title_fees | currency}}</span>
+  </div>
+  <div id="transfer-taxes" class="row">
+    <span class="col-md-2">Transfer Taxes</span>
+    <span class="col-md-1 align-right">{{closing_cost.transfer_taxes | currency}}</span>
+  </div>
+  <div id="government-recording-charges" class="row">
+    <span class="col-md-2">Government Recording Charges</span>
+    <span class="col-md-1 align-right">{{closing_cost.government_recording_charges | currency}}</span>
+  </div>
+  <div id="homeowners-insurance" class="row">
+    <span class="col-md-2">Homeowners Insurance</span>
+    <span class="col-md-1 align-right">{{closing_cost.homeowners_insurance | currency}}</span>
+  </div>
+  <div id="settlement-company-charges" class="row">
+    <span class="col-md-2">Settlement Company Charges</span>
+    <span class="col-md-1 align-right">{{closing_cost.settlement_company_charges | currency}}</span>
+  </div>
+  <div id="wire-charges" class="row">
+    <span class="col-md-2">Wire Charges</span>
+    <span class="col-md-1 align-right">{{closing_cost.wire_charges | currency}}</span>
+  </div>
 </div>
