Tighten up the inputs grid using a 24-column grid

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,6 +1,6 @@
-<div id="financing-and-income-assumptions" class="container">
+<div id="financing-and-income-assumptions" class="container grid-24-across">
   <div class="row">
-    <div class="col-md-7 subsection-header">Financing and Income Assumptions</div>
+    <div class="col-md-8 subsection-header">Financing and Income Assumptions</div>
   </div>
   <valuation-inputs></valuation-inputs>
   <operating-expenses-inputs></operating-expenses-inputs>
