Add cost and revenue assumptions and karma tests

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -6,4 +6,5 @@
   <operating-expenses-inputs></operating-expenses-inputs>
   <closing-costs-inputs></closing-costs-inputs>
   <income-and-cost-projections></income-and-cost-projections>
+  <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
 </div>
