--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,10 +1,14 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
   <div class="row">
-    <div class="col-md-8 subsection-header">Financing and Income Assumptions</div>
+    <div class="col-md-12 subsection-header">Financing and Income Assumptions</div>
   </div>
-  <valuation-inputs></valuation-inputs>
-  <operating-expenses-inputs></operating-expenses-inputs>
-  <closing-costs-inputs></closing-costs-inputs>
-  <income-and-cost-projections></income-and-cost-projections>
-  <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
+  <div class="col-md-6">
+    <valuation-inputs></valuation-inputs>
+    <operating-expenses-inputs></operating-expenses-inputs>
+    <closing-costs-inputs></closing-costs-inputs>
+    <income-and-cost-projections></income-and-cost-projections>
+  </div>
+  <div class="col-md-6">
+    <cost-and-revenue-assumptions></cost-and-revenue-assumptions>
+  </div>
 </div>
