Connect the property details as one object

--- a/public/investment_properties_pages/cost_and_revenue_assumptions.html
+++ b/public/investment_properties_pages/cost_and_revenue_assumptions.html
@@ -4,15 +4,15 @@
   </div>
   <div class="row">
     <span class="col-md-18">Land</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.land_cost | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Building</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.building_cost | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Improvements</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.improvements | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Closing Costs</span>
@@ -24,11 +24,11 @@
   </div>
   <div class="row">
     <span class="col-md-18">Number of Units</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.number_of_units | number:0}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number:0}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Average Monthly Rent</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Gross Monthly Rent</span>
@@ -36,7 +36,7 @@
   </div>
   <div class="row">
     <span class="col-md-18">Other Income</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.other_monthly_income | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
   </div>
   <div class="row">
     <span class="col-md-18">Total Gross Monthly Income</span>
