--- a/public/investment_properties_pages/operating_income_inputs.html
+++ b/public/investment_properties_pages/operating_income_inputs.html
@@ -4,66 +4,66 @@
   </div>
   <div id="vacancy-rate" class="row">
     <span class="col-md-18">Vacancy Rate</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.vacancy_rate | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.vacancy_rate | percentage}}</span>
   </div>
   <div id="repairs-and-maintenance" class="row">
     <span class="col-md-18">Repairs and Maintenance</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.repairs_and_maintenance | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.repairs_and_maintenance | currency}}</span>
   </div>
   <div id="property-management-fees" class="row">
     <span class="col-md-18">Property Management Fees</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.property_management_fees | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.property_management_fees | percentage}}</span>
   </div>
   <div id="utilities" class="row">
     <span class="col-md-18">Utilities</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.utilities | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.utilities | currency}}</span>
   </div>
   <div id="taxes" class="row">
     <span class="col-md-18">Taxes</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.taxes | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.taxes | currency}}</span>
   </div>
   <div id="insurance" class="row">
     <span class="col-md-18">Insurance</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.insurance | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.insurance | currency}}</span>
   </div>
   <div id="salaries-and-wages" class="row">
     <span class="col-md-18">Salaries and Wages</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.salaries_and_wages | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.salaries_and_wages | currency}}</span>
   </div>
   <div id="water-and-sewer" class="row">
     <span class="col-md-18">Water and Sewer</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.water_and_sewer | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.water_and_sewer | currency}}</span>
   </div>
   <div id="trash-removal" class="row">
     <span class="col-md-18">Trash Removal</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.trash_removal | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.trash_removal | currency}}</span>
   </div>
   <div id="professional-fees" class="row">
     <span class="col-md-18">Professional Fees</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.professional_fees | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.professional_fees | currency}}</span>
   </div>
   <div id="advertising" class="row">
     <span class="col-md-18">Advertising</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.advertising | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.advertising | currency}}</span>
   </div>
   <div id="landscaping" class="row">
     <span class="col-md-18">Landscaping</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.landscaping | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.landscaping | currency}}</span>
   </div>
   <div id="capital-expenditures" class="row">
     <span class="col-md-18">CapEx</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.capex | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.capex | percentage}}</span>
   </div>
   <div id="other-expenses" class="row">
     <span class="col-md-18">Other Expenses</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.other_expenses | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.other_expenses | currency}}</span>
   </div>
   <div id="equipment-depreciation" class="row">
     <span class="col-md-18">Equipment Depreciation</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.equipment_depreciation | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.equipment_depreciation | currency}}</span>
   </div>
   <div id="income-tax-rate" class="row">
     <span class="col-md-18">Income Tax Rate</span>
-    <span class="col-md-6 align-right">{{operating_expenses_assumption.income_tax_rate | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.operating_expenses_assumption.income_tax_rate | percentage}}</span>
   </div>
 </div>
