--- a/public/investment_properties_pages/valuation_inputs.html
+++ b/public/investment_properties_pages/valuation_inputs.html
@@ -4,42 +4,42 @@
   </div>
   <div id="land-cost" class="row">
     <span class="col-md-18">Land Cost:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.land_cost | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency}}</span>
   </div>
   <div id="building-cost" class="row">
     <span class="col-md-18">Building Cost:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.building_cost | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency}}</span>
   </div>
   <div id="improvements" class="row">
     <span class="col-md-18">Improvements:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.improvements | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency}}</span>
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-md-18">Total Square Feet:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.total_square_feet | number}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number}}</span>
   </div>
   <div id="number-of-units" class="row">
     <span class="col-md-18">Number of Units:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.number_of_units | number}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number}}</span>
   </div>
   <div id="average-monthly-rent" class="row">
     <span class="col-md-18">Average Monthly Rent:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency}}</span>
   </div>
   <div id="other-income" class="row">
     <span class="col-md-18">Other Income:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.other_monthly_income | currency}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.other_monthly_income | currency}}</span>
   </div>
   <div id="equity-percentage" class="row">
     <span class="col-md-18">Equity Percentage:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.equity_percentage | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.equity_percentage | percentage}}</span>
   </div>
   <div id="loan-interest-rate" class="row">
     <span class="col-md-18">Loan Interest Rate:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.loan_interest_rate | percentage}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.loan_interest_rate | percentage}}</span>
   </div>
   <div id="amortization-period-in-years" class="row">
     <span class="col-md-18">Amortization Period in Years:</span>
-    <span class="col-md-6 align-right">{{financing_and_income_assumption.amortization_period_in_years | number}}</span>
+    <span class="col-md-6 align-right">{{rental_property.financing_and_income_assumption.amortization_period_in_years | number}}</span>
   </div>
 </div>
