Enable saving of the land cost via a 'Save' button on the property page

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,5 +1,9 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
   <div class="row">
+    <button ng-click="save()">Save</button>
+    <div>{{persistenceState}}</div>
+  </div>
+  <div class="row">
     <div class="col-md-12 subsection-header">Financing and Income Assumptions</div>
   </div>
   <div class="col-md-6">
